more jQuery frontend

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,16 @@
 <body>
   <header></header>
 
-  <main>
-    <div id="products-index"></div>
-    <div id="products-show">
-      <div id="reviews-container">
-        <div id="reviews-new"></div>
-        <div id="reviews-index"></div>
-      </div>
-    </div>
-  </main>
+  <main></main>
+
+  <div id="new-review">
+    <form id="new-review-form">
+      <input type="text" placeholder="title"/>
+      <input type="text" placeholder="author" />
+      <input type="text" placeholder="content" />
+      <input type="submit" />
+    </form>
+  </div>
 
   <footer></footer>
 </body>
